statistics.html, javascript and css added

--- a/src/main/resources/templates/finances.html
+++ b/src/main/resources/templates/finances.html
@@ -10,7 +10,8 @@
 
 
 <h1>Finances</h1>
-<a href="/addfinance">Add item</a>
+<a href="/addfinance">Add finance</a>
+<a href="/statistics">Statistics</a>
 <hr>
 
 <h2>Find finances by:</h2>
