--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,16 @@
 h1 {
   font-weight: bold;
-  color: magenta;
+  color: black;
+  text-shadow: 2px 2px 1px rgb(230, 0, 172);
+}
+
+h2 {
+  color: rgb(230, 0, 172);
 }
 
 table, th, td {
   border: 1px solid black;
+  background-color: rgb(255, 230, 255);
 }
 
 th, td {
@@ -12,7 +18,8 @@ th, td {
 }
 
 button {
-  background-color: magenta;
+  color: white;
+  background-color: rgb(230, 0, 172);
   border-radius: 5px;
   transition-duration: 0.4s;
   font-size: 15px;
@@ -20,9 +27,15 @@ button {
 
 button:hover {
   background-color: white;
-  color: magenta;
+  color: rgb(230, 0, 172);
 }
 
 a:hover, a:active {
-  color: magenta;
+  color: rgb(230, 0, 172);
 }
+
+a {
+margin: 0px 10px;
+}
+
+
