--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,16 +1,25 @@
 h1 {
   font-weight: bold;
   color: black;
-  text-shadow: 2px 2px 1px rgb(230, 0, 172);
+  text-shadow: 2px 2px 1px rgb(149, 152, 155);
 }
 
 h2 {
-  color: rgb(230, 0, 172);
+  color: rgb(153, 51, 255);
 }
 
-table, th, td {
+td {
   border: 1px solid black;
-  background-color: rgb(255, 230, 255);
+  background-color: rgb(242, 242, 242);
+}
+
+table, th {
+  border: 1px solid black;
+  background-color: rgb(229, 204, 255);
+}
+
+.statistics table, .statistics th {
+  background-color: rgb(242, 242, 242);
 }
 
 th, td {
@@ -19,7 +28,7 @@ th, td {
 
 button {
   color: white;
-  background-color: rgb(230, 0, 172);
+  background-color: rgb(153, 51, 255);
   border-radius: 5px;
   transition-duration: 0.4s;
   font-size: 15px;
@@ -27,15 +36,18 @@ button {
 
 button:hover {
   background-color: white;
-  color: rgb(230, 0, 172);
+  color: rgb(153, 51, 255);
 }
 
 a:hover, a:active {
-  color: rgb(230, 0, 172);
+  color: rgb(153, 51, 255);
 }
 
 a {
 margin: 0px 10px;
 }
 
+#total {
+   font-weight: bold;
+}
 
