--- a/src/main/resources/templates/addrecipe.html
+++ b/src/main/resources/templates/addrecipe.html
@@ -1,32 +1,43 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Add Item</title>
+    <title>Add Recipe</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
 
-    <h1>Add Item</h1>
-    <a href="/shoppinglist">Back to Shopping List</a>
+    <h1>Add Recipe</h1>
+    <a href="/recipes">Back to Recipes</a>
     <hr>
 
     <br>
 
-    <form action="/additem" method="post">
+    <form action="/addrecipe" method="post" enctype="multipart/form-data">
         <label for="name">Name</label>
-    <input id="name" type="text" name="name"><br>
+    <input id="name" type="text" name="name" required><br>
         <br>
-        <label for="name">Quantity</label>
-    <input id="quantity" type="text" name="quantity">
-    <select name="scale">
-        <option value="g">g</option>
-        <option value="kg">kg</option>
-        <option value="pcs">pcs</option>
-        <option value="ml">ml</option>
-        <option value="l">l</option>
-    </select>
+        <label for="category">Category</label>
+        <select name="category" id="category">
+            <option th:each="category : ${categories}" th:value="${category.id}"
+                    th:text="${category.label}" >
+            </option>
+        </select>
+        <br>
+        <br>
+        <label for="ingredients">Ingredients</label>
+        <br>
+        <textarea id="ingredients" type="text" name="ingredients" rows="4" cols="80"></textarea>
+        <br>
+        <br>
+        <label for="instructions">Instructions</label>
+        <br>
+        <textarea id="instructions" type="text" name="instructions" rows="10" cols="80"></textarea>
+        <br>
+        <br>
+        <label for="image">Image</label>
+        <input id="image" name="image" type="file">
     <br><br>
     <button type="submit">Add Item</button>
 </form>
