Edit recipe added. Fitness class created. fitness.html added

--- a/src/main/resources/templates/addrecipe.html
+++ b/src/main/resources/templates/addrecipe.html
@@ -40,6 +40,10 @@
         <input id="image" name="image" type="file">
     <br><br>
     <button type="submit">Add Item</button>
+
+        <div th:if="${failedMessage}">
+            <p th:text="${failedMessage}" class="alert"></p>
+        </div>
 </form>
 
 </body>
