added bootstrap and layout

--- a/src/main/resources/templates/addfinance.html
+++ b/src/main/resources/templates/addfinance.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout">
 <head>
     <title>Add Finance</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-
+<div layout:fragment="content">
 <h1>Add Finance</h1>
 <a href="/finances">Back to Finances</a>
 <hr>
@@ -33,6 +32,6 @@
     <br><br>
     <button type="submit">Add Finance</button>
 </form>
-
+</div>
 </body>
 </html>
