--- a/src/main/resources/templates/addrecipe.html
+++ b/src/main/resources/templates/addrecipe.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout">
 <head>
     <title>Add Recipe</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-
+<div layout:fragment="content">
     <h1>Add Recipe</h1>
     <a href="/recipes">Back to Recipes</a>
     <hr>
@@ -45,6 +44,6 @@
             <p th:text="${failedMessage}" class="alert"></p>
         </div>
 </form>
-
+</div>
 </body>
 </html>
