--- a/src/main/resources/templates/editrecipe.html
+++ b/src/main/resources/templates/editrecipe.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout">
 <head>
     <title>Edit Recipe</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-
+<div layout:fragment="content">
     <h1>Edit Recipe</h1>
     <a href="/recipes">Back to Recipes</a>
     <a href="/addrecipe">Add recipe</a>
@@ -58,6 +57,6 @@
         </div>
 
 </form>
-
+</div>
 </body>
 </html>
