--- a/src/main/resources/templates/finances.html
+++ b/src/main/resources/templates/finances.html
@@ -1,13 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout">
 <head>
     <title>Finances</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/scripts.js"></script>
 </head>
 <body>
-
+<div layout:fragment="content">
 
 <h1>Finances</h1>
 <a href="/addfinance">Add finance</a>
@@ -55,6 +53,6 @@
     </tbody>
 </table>
 <br>
-
+</div>
 </body>
 </html>
