--- a/src/main/resources/templates/fitness.html
+++ b/src/main/resources/templates/fitness.html
@@ -8,7 +8,7 @@
 <div layout:fragment="content">
 
 <h1>Fitness</h1>
-<!--<a href="/addfitness">Add fitness</a>-->
+<a href="/addfitness">Add fitness</a>
 <hr>
 
 <h2>Find fitness by:</h2>
