--- a/src/main/resources/templates/edititem.html
+++ b/src/main/resources/templates/edititem.html
@@ -7,26 +7,33 @@
 <body>
 
 <div layout:fragment="content">
-    <h1>Edit Item</h1>
+    <h1>Edit Shopping Item</h1>
     <a href="/shoppinglist">Back to Shopping List</a>
+    <a href="/additem">Add Shopping Item</a>
     <hr>
 
     <br>
 
-    <form action="/edititem" method="post">
+    <form action="/edititem" method="post" class="form-group">
         <input type="hidden" name="id" th:value="${item.id}">
         <label for="name">Name</label>
-    <input id="name" type="text" name="name" th:value="${item.name}"><br>
+    <input id="name" type="text" name="name" th:value="${item.name}" class="form-control"><br>
         <br>
         <label for="name">Quantity</label>
-    <input id="quantity" type="text" name="quantity" th:value="${item.quantity}">
-    <select name="scale" th:field="*{item.scale}">
-        <option value="g">g</option>
-        <option value="kg">kg</option>
-        <option value="pcs">pcs</option>
-        <option value="ml">ml</option>
-        <option value="l">l</option>
-    </select>
+        <div class="form-row">
+            <div class="col">
+                <input id="quantity" type="text" name="quantity" th:value="${item.quantity}" class="form-control">
+            </div>
+        <div class="col">
+            <select name="scale" th:field="*{item.scale}" class="form-control">
+                <option value="g">g</option>
+                <option value="kg">kg</option>
+                <option value="pcs">pcs</option>
+                <option value="ml">ml</option>
+                <option value="l">l</option>
+            </select>
+        </div>
+        </div>
     <br><br>
     <button type="submit">Edit Item</button>
 </form>
