--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -13,9 +13,9 @@
 
 <h2>Find recipes by:</h2>
 
-<form action="/recipes" method="post">
+<form action="/recipes" method="post" class="formg-group">
     <label for="category">Category</label>
-    <select name="category" id="category">
+    <select name="category" id="category" class="form-control">
         <option value="Chicken">Chicken</option>
         <option value="Beef">Beef</option>
         <option value="Pork">Pork</option>
@@ -26,6 +26,7 @@
         <option value="Desserts">Desserts</option>
         <option value="Savoury">Savoury</option>
     </select>
+    <br>
     <button type="submit">Submit</button>
 </form>
 <br><br>
