--- a/src/main/resources/templates/additem.html
+++ b/src/main/resources/templates/additem.html
@@ -7,25 +7,31 @@
 <body>
 
 <div layout:fragment="content">
-    <h1>Add Item</h1>
+    <h1>Add Shopping Item</h1>
     <a href="/shoppinglist">Back to Shopping List</a>
     <hr>
 
     <br>
 
-    <form action="/additem" method="post">
+    <form action="/additem" method="post" class="form-group">
         <label for="name">Name</label>
-    <input id="name" type="text" name="name"><br>
+    <input id="name" type="text" name="name" class="form-control"><br>
         <br>
         <label for="name">Quantity</label>
-    <input id="quantity" type="text" name="quantity">
-    <select name="scale">
-        <option value="g">g</option>
-        <option value="kg">kg</option>
-        <option value="pcs">pcs</option>
-        <option value="ml">ml</option>
-        <option value="l">l</option>
-    </select>
+        <div class="form-row">
+            <div class="col">
+                 <input id="quantity" type="text" name="quantity" class="form-control">
+            </div>
+            <div class="col">
+            <select name="scale" class="form-control">
+                <option value="g">g</option>
+                <option value="kg">kg</option>
+                <option value="pcs">pcs</option>
+                <option value="ml">ml</option>
+                <option value="l">l</option>
+            </select>
+            </div>
+        </div>
     <br><br>
     <button type="submit">Add Item</button>
 </form>
