--- a/src/main/resources/templates/addrecipe.html
+++ b/src/main/resources/templates/addrecipe.html
@@ -13,12 +13,12 @@
 
     <br>
 
-    <form action="/addrecipe" method="post" enctype="multipart/form-data">
+    <form action="/addrecipe" method="post" enctype="multipart/form-data" class="form-group">
         <label for="name">Name</label>
-    <input id="name" type="text" name="name" required><br>
+    <input id="name" type="text" name="name" required class="form-control"><br>
         <br>
         <label for="category">Category</label>
-        <select name="category" id="category">
+        <select name="category" id="category" class="form-control">
             <option th:each="category : ${categories}" th:value="${category.id}"
                     th:text="${category.label}" >
             </option>
@@ -27,16 +27,16 @@
         <br>
         <label for="ingredients">Ingredients</label>
         <br>
-        <textarea id="ingredients" type="text" name="ingredients" rows="4" cols="80"></textarea>
+        <textarea id="ingredients" type="text" name="ingredients" rows="4" cols="80" class="form-control"></textarea>
         <br>
         <br>
         <label for="instructions">Instructions</label>
         <br>
-        <textarea id="instructions" type="text" name="instructions" rows="10" cols="80"></textarea>
+        <textarea id="instructions" type="text" name="instructions" rows="10" cols="80" class="form-control"></textarea>
         <br>
         <br>
         <label for="image">Image</label>
-        <input id="image" name="image" type="file">
+        <input id="image" name="image" type="file" class="form-control-file">
     <br><br>
     <button type="submit">Add Item</button>
 
