--- a/src/main/resources/templates/editfinance.html
+++ b/src/main/resources/templates/editfinance.html
@@ -13,19 +13,19 @@
 
     <br>
 
-    <form action="/editfinance" method="post">
+    <form action="/editfinance" method="post" class="form-group">
         <input type="hidden" name="id" th:value="${finance.id}">
         <label for="date">Date</label>
-    <input id="date" type="date" th:field="*{finance.date}"><br>
+    <input id="date" type="date" th:field="*{finance.date}" class="form-control">
         <br>
         <label for="cost">Cost</label>
-        <input id="cost" type="text" name="cost" th:value="${finance.cost}">
-        <label for="description">Description</label>
-        <input id="description" type="text" name="description" th:value="${finance.description}">
+        <input id="cost" type="text" name="cost" th:value="${finance.cost}" class="form-control">
         <br>
+        <label for="description">Description</label>
+        <input id="description" type="text" name="description" th:value="${finance.description}" class="form-control">
         <br>
         <label for="category">Category</label>
-        <select name="category" id="category" th:field="*{finance.category}">
+        <select name="category" id="category" th:field="*{finance.category}" class="form-control">
             <option th:each="category : ${categories}" th:value="${category.id}"
                     th:text="${category.label}" >
             </option>
