--- a/src/main/resources/templates/editrecipe.html
+++ b/src/main/resources/templates/editrecipe.html
@@ -14,14 +14,14 @@
 
     <br>
 
-    <form action="/editrecipe" method="post" enctype="multipart/form-data">
+    <form action="/editrecipe" method="post" enctype="multipart/form-data" class="form-group">
         <input type="hidden" name="id" th:value="${recipe.id}">
         <label for="name">Name</label>
-    <input id="name" type="text" th:field="${recipe.name}" required><br>
+    <input id="name" type="text" th:field="${recipe.name}" required class="form-control"><br>
         <br>
 
         <label for="category">Category</label>
-        <select name="category" id="category" th:field="*{recipe.category}">
+        <select name="category" id="category" th:field="*{recipe.category}" class="form-control">
             <option th:each="category : ${categories}" th:value="${category.id}"
                     th:text="${category.label}">
             </option>
@@ -30,16 +30,16 @@
 
         <label for="ingredients">Ingredients</label>
         <br>
-        <textarea id="ingredients" type="text" name="ingredients" rows="4" cols="80" th:field="*{recipe.ingredients}"></textarea>
+        <textarea id="ingredients" type="text" name="ingredients" rows="4" cols="80" th:field="*{recipe.ingredients}" class="form-control"></textarea>
         <br>
         <br>
         <label for="instructions">Instructions</label>
         <br>
-        <textarea id="instructions" type="text" name="instructions" rows="10" cols="80" th:field="*{recipe.instructions}"></textarea>
+        <textarea id="instructions" type="text" name="instructions" rows="10" cols="80" th:field="*{recipe.instructions}" class="form-control"></textarea>
         <br>
         <br>
         <label for="image">Image</label>
-        <input id="image" name="image" type="file">
+        <input id="image" name="image" type="file" class="form-control-file">
         <br>
         <br>
 
