--- a/src/main/resources/templates/finances.html
+++ b/src/main/resources/templates/finances.html
@@ -14,13 +14,13 @@
 
 <h2>Find finances by:</h2>
 
-<form action="/finances" method="post">
+<form action="/finances" method="post" class="form-group">
     <label for="year">Year</label>
-    <input id="year" type="number" name="year" step="1">
+    <input id="year" type="number" name="year" step="1" class="form-control">
 
     <label for="month">Month</label>
-    <input id="month" type="number" name="month" step="1" min="1" max="12">
-
+    <input id="month" type="number" name="month" step="1" min="1" max="12" class="form-control">
+<br>
     <button type="submit">Submit</button>
 </form>
 <br><br>
