--- a/src/main/resources/templates/fitness.html
+++ b/src/main/resources/templates/fitness.html
@@ -13,21 +13,21 @@
 
 <h2>Find fitness by:</h2>
 
-<form action="/fitness" method="post">
+<form action="/fitness" method="post" class="form-group">
     <label for="year">Year</label>
-    <input id="year" type="number" name="year" step="1">
+    <input id="year" type="number" name="year" step="1" class="form-control">
 
     <label for="month">Month</label>
-    <input id="month" type="number" name="month" step="1" min="1" max="12">
+    <input id="month" type="number" name="month" step="1" min="1" max="12" class="form-control">
 
     <label for="name">Name</label>
-    <select name="name" id="name">
+    <select name="name" id="name" class="form-control">
         <option>All</option>
         <option th:each="name : ${names}" th:value="${name}"
                 th:text="${name}">
         </option>
     </select>
-
+    <br>
     <button type="submit">Submit</button>
 </form>
 <br><br>
