--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -15,13 +15,13 @@
 
 <h2>Get statistics for:</h2>
 
-<form action="/statistics" method="post">
+<form action="/statistics" method="post" class="form-group">
     <label for="year">Year</label>
-    <input id="year" type="number" name="year" step="1">
+    <input id="year" type="number" name="year" step="1" class="form-control">
 
     <label for="month">Month</label>
-    <input id="month" type="number" name="month" step="1" min="1" max="12">
-
+    <input id="month" type="number" name="month" step="1" min="1" max="12" class="form-control">
+    <br>
     <button type="submit" id="statisticsSubmit">Submit</button>
 </form>
 <br>
